--- a/style.css
+++ b/style.css
@@ -1,1 +1,44 @@
+/*@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
+*/
+h1{
+    text-align: center;
+}
+
+h2, h4, h5, p{
+    font-family: Arial;
+}
+
+a{
+    color: grey;
+    text-decoration: none;
+}
+
+li{
+    display:inline-block;
+    font-size: small;
+    padding: .5px;
+    margin-left: .5em;
+    margin-right: .5em;
+
+}
+
+body {
+    font-family: 'Source Sans pro';
+    background-color: #eee  ;
+    font-weight: 200;
+
+}
+
+.newspaper-container {
+        background-color: white;
+        box-shadow: 2px 2px #ddd;
+        border-radius: 10px ;
+        width: 700px;
+        padding: 1em;
+        margin: 3em auto;
+        box-sizing: border-box;
+} 
+
+
